added khaby lame gif

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,24 @@
 
             <label for="jira_excel">Jira Description Excel:</label>
             <input type="file" id="jira_excel" name="jira_excel" accept=".xlsx,.xls">
-
+            <div class="box" style="
+                width: 100px;
+                height: 100px;
+                margin: 50px auto;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                box-sizing: border-box;
+                background: #fff;
+                border-radius: 12px;
+                box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            ">
+            <div class="tenor-gif-embed" data-postid="16981368673594264600" data-share-method="host" data-aspect-ratio="1" data-width="150%"><a href="https://tenor.com/view/khaby-khaby-lame-simple-gif-16981368673594264600">Khaby Khaby Lame GIF</a>from <a href="https://tenor.com/search/khaby-gifs">Khaby GIFs</a>
+            </div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            </div>
             <button type="submit">Generate CSV</button>
-            <p class="note">Upload both Excel files and specify version to generate the final CSV.</p>
         </form>
     </div>
 </body>
