updated index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
             <div class="tenor-gif-embed" data-postid="16981368673594264600" data-share-method="host" data-aspect-ratio="1" data-width="150%"><a href="https://tenor.com/view/khaby-khaby-lame-simple-gif-16981368673594264600">Khaby Khaby Lame GIF</a>from <a href="https://tenor.com/search/khaby-gifs">Khaby GIFs</a>
             </div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             </div>
-            <button type="submit">Generate CSV</button>
+            <button type="submit">Generate</button>
         </form>
     </div>
 </body>
